fix(seguranca): autorizacao real no backend, JWT, rate limiting e soft delete
Fecha as issues criticas e altas da auditoria (#1 a #6, #11):

- WebSecurityConfig: anyRequest().authenticated() no lugar do permitAll()
  global; TokenService + SecurityFilter emitem e validam JWT (issues #1, #2)
- Modulos financeiros (CashRegister, CashMovement, AccountPayable,
  AccountReceivable), gestao de usuarios e exclusao de produto restritos a
  ADMIN via PreAuthorize, conforme perfis descritos no TCC secao 5.1
- CORS restrito a origem configurada (era coringa) e as anotacoes
  CrossOrigin coringa redundantes removidas de 10 controllers (issue #3)
- LoginRateLimiter: bloqueio de 5 min apos 5 tentativas por IP+email (issue #4)
- UserService.login() nao derruba mais o servidor com 500 em senha errada:
  BusinessException com mensagem generica (nao revela se o email existe) e
  corrige o mojibake da mensagem antiga (issue relacionada ao login)
- DELETE /user/{id} implementado (faltava; front ja tinha um botao pendente
  pra isso) e protegido contra excluir o ultimo administrador (issue #6)
- Senha do admin/BD deixa de estar hardcoded, configuravel via
  ADMIN_PASSWORD/DB_PASSWORD com o mesmo default de dev (issue #11)
- Soft delete em Produto, Cliente, Fornecedor e Categoria: excluir marca
  active como falso em vez de remover a linha, preservando o historico de
  vendas, compras e fichas tecnicas que apontam pra esses registros

Front: services/api.js agora anexa o Bearer token via interceptor do Axios.
9 componentes chamavam axios cru com URL hardcoded (bypassando esse
interceptor) - todos migrados para a instancia compartilhada; PersonForm e
SupplierForm mantem axios cru so pra ViaCEP (API de terceiro, nao deve levar
nosso token).

Testes: 17/17 passando (2 novos - SoftDeleteIntegrationTest e ajuste do
SigRestApiIntegrationTest pra autenticar como ADMIN via WithMockUser, ja
que os endpoints agora exigem login).